[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/particles/FlameParticle.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/misc/fire_fairy_1.png" type="Texture" id=2]
[ext_resource path="res://assets/misc/fire_fairy_2.png" type="Texture" id=3]
[ext_resource path="res://scripts/skills/FireFairy.gd" type="Script" id=4]

[sub_resource type="Animation" id=3]
resource_name = "Flap"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 3 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 2 ) ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 51.5857

[sub_resource type="CircleShape2D" id=5]
radius = 636.027

[node name="FireFairy" type="Area2D" groups=["Fireball", "LightKnockback"]]
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="FlameParticle" parent="." instance=ExtResource( 1 )]
lifetime = 0.75
randomness = 1.0
emission_shape = 2
emission_rect_extents = Vector2( 1, 1 )
initial_velocity = 20.0
angular_velocity = 20.0
radial_accel = 10.19
damping = 7.24
hue_variation = -1.0

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )

[node name="DestroyedTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Flap = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
shape = SubResource( 5 )

[node name="BurningLevel" type="Area2D" parent="." groups=["BurningLevel"]]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BurningLevel"]
polygon = PoolVector2Array( -30.6909, -49.7348, -30.6909, -175.048, 30.6034, -115.115, 31.2845, -49.0537, 58.5264, -27.2602, 58.5264, 28.5858, 28.5603, 46.2931, 29.9224, 173.649, -31.372, 117.803, -31.372, 45.612, -59.295, 28.5858, -59.976, -30.6654 )

[connection signal="area_entered" from="." to="." method="_on_HomingOnEnemiesFireball_area_entered"]
[connection signal="timeout" from="DestroyedTimer" to="." method="_on_DestroyedTimer_timeout"]
